example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-2.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_.\")"
---
Ok(
    Language {
        v: None,
        _s: (),
        t: Spanned {
            value: None,
            byte_span: (
                1,
                1,
            ),
            line_span: (
                Point {
                    line: 1,
                    column: 2,
                },
                Point {
                    line: 1,
                    column: 2,
                },
            ),
        },
        _d: Some(
            (),
        ),
    },
)
