example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-3.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"1_\")"
---
Ok(
    Language {
        v: Some(
            1,
        ),
        _s: (),
        t: Spanned {
            value: None,
            byte_span: (
                2,
                2,
            ),
            line_span: (
                Point {
                    line: 0,
                    column: 0,
                },
                Point {
                    line: 0,
                    column: 0,
                },
            ),
        },
        _d: None,
    },
)
