example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-4.snap
---
source: example/src/optionals.rs
expression: "grammar::Language::parse(\"1_.\")"
---
ParseResult {
    result: Some(
        Language {
            v: Some(
                Number {
                    v: 1,
                },
            ),
            _s: (),
            t: Spanned {
                value: None,
                position: Position {
                    bytes: 2..3,
                    start: Point {
                        line: 1,
                        column: 3,
                    },
                    end: Point {
                        line: 1,
                        column: 4,
                    },
                },
            },
            _d: Some(
                (),
            ),
        },
    ),
    errors: [],
}
