example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-5.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"1_2\")"
---
Ok(
    Language {
        v: Some(
            1,
        ),
        _s: (),
        t: Spanned {
            value: Some(
                Number {
                    v: 2,
                },
            ),
            byte_span: (
                2,
                3,
            ),
            line_span: (
                Point {
                    line: 1,
                    column: 3,
                },
                Point {
                    line: 1,
                    column: 4,
                },
            ),
        },
        _d: None,
    },
)
