example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-8.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_2.\")"
---
Ok(
    Language {
        v: None,
        _s: (),
        t: Spanned {
            value: Some(
                Number {
                    v: 2,
                },
            ),
            byte_span: (
                1,
                2,
            ),
            line_span: (
                Point {
                    line: 1,
                    column: 2,
                },
                Point {
                    line: 1,
                    column: 3,
                },
            ),
        },
        _d: Some(
            (),
        ),
    },
)
