example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar.snap
---
source: example/src/optionals.rs
expression: "grammar::Language::parse(\"_\")"
---
ParseResult {
    result: Some(
        Language {
            v: None,
            _s: (),
            t: Spanned {
                value: None,
                position: Position {
                    bytes: 0..0,
                    start: Point {
                        line: 1,
                        column: 1,
                    },
                    end: Point {
                        line: 1,
                        column: 1,
                    },
                },
            },
            _d: None,
        },
    ),
    errors: [],
}
